# NextjsDjangoPostgre

./: .gitignore  ReadMe.md
backend/: README.md  Realtaion.md  pyproject.toml  requirements.txt
backend/OnlineStore/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/OnlineStore/migrations/: 0001_initial.py
backend/UserExtend/: admin.py  apps.py  cache_utils.py  jwt_views.py  models.py  serializer.py  urls.py  views.py
backend/UserExtend/migrations/: 0001_initial.py  0002_department_userinfo_department.py
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/approvals/: admin.py  approvers.py  apps.py  models.py  registry.py  serializers.py  services.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py
backend/common/: urls.py  views.py
backend/monitoring/: middleware.py  urls.py  views.py
backend/mq/: apps.py  consumer.py  models.py  producer.py  serializers.py  tasks.py  urls.py  views.py
backend/mq/management/commands/: run_consumer.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/components/: CategorySection.tsx  FeaturedProducts.tsx  Footer.tsx  HeroBanner.tsx  Navbar.tsx  ProductCard.tsx
ginbackend/: .env.example  go.mod  main.go
ginbackend/config/: config.go
ginbackend/internal/auth/: jwt.go  password.go
ginbackend/internal/database/: database.go
ginbackend/internal/handler/: auth_handler.go
loadtest/: README.md  locustfile.py  pyproject.toml
(+8 files in other folders)
