[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "django-jazzmin>=3.0.3",
    "djangorestframework>=3.16.1",
    "psycopg[binary]>=3.3.2",
    "uvicorn[standard]>=0.40.0",
    "whitenoise>=6.11.0",
    "pika>=1.3.2",
    "django-redis>=5.4.0",
    "djangorestframework-simplejwt>=5.3.1",
    "python-dateutil>=2.9.0",
]
